--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -9,17 +9,19 @@
 <% end %>
     <br>
     
-<%= form_with url: login_path, local: true do |f| %>
+<%= form_with url: login_path, local: true do |form| %>
 
-    <%= f.label :email %>
-    <br>
-    <%= f.text_field :email %>
-    <br><br>
 
-    <%= f.label :password %>
-    <br>
-    <%= f.password_field :password %>
-    <br><br>
+    <div class="mb-3">
+    <%= form.label :email%>
+    <%= form.text_field :email, class: 'form-control', placeholder: "example@email.com" %>
+    </div>
 
-    <%= f.submit 'Login' %>
+    <div class="mb-3">
+    <%= form.label :password%>
+    <%= form.password_field :password, class: 'form-control',  placeholder: "password" %>
+    </div>
+
+    <%= form.submit 'Login' %>
+    
 <% end %>
