--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: hotpink;
-    background-color: aquamarine;
+    color: rgb(198, 134, 166);
+    background-color: rgb(180, 224, 209);
     align-content: center;
     text-align: center;
 }
@@ -19,11 +19,48 @@ body {
 }
 
 ul{
-    padding: 0;
+    padding: 10px;
 }
 
 #logo img{
 
     width: 100px;
     max-width: 100px;
+}
+
+
+.link_button:link{
+    text-decoration: none;
+    color:royalblue
+
+}
+
+.link_button:visited{
+    text-decoration: none;
+    color:mediumturquoise
+
+}
+.link_button:hover{
+    text-decoration: none;
+    color:darkcyan;
+
+}
+.link_button:active{
+    text-decoration: none;
+    color:steelblue;
+
+}
+
+.link_button{
+    font-size: 12px;
+
+}
+
+.title_button{
+    font-size: 25px;
+    color:slateblue;
+}
+
+.title_show{
+    color:rgb(246, 144, 125);
 }
