--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_with model: @document, local: true do |f| %>
     
-    if 
+
+
     <%= f.label :title, 'Title', class:'form-label' %>
     <%= f.text_field :title, class: 'form-label' %>
     <br>
@@ -13,8 +14,10 @@
     <%= f.text_field :image, class: 'form-label' %>
     <br>
 
+
     <%= f.label :lawyer_signature, 'Lawyer Signature', class:'form-label' %>
-    <%= f.text_field :lawyer_signature, :required => true, class: 'form-label' %>
+
+    <%= f.text_field :lawyer_signature, :required => true, class: 'form-label', disabled: @current_user.client? %>
     <br>
 
     <%= f.label :user_signature, 'User Signature', class:'form-label' %>
